--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,3 +8,4 @@ jobs:
       - setup_remote_docker:
           docker_layer_caching: true
       - run: docker build -f test/Dockerfile . -t test
+      - run: docker run test
